test/type-check/should-fail/redef.bril
main{

    v0: int = const 5;
    v0: bool = const true;
    print v0;

}
